tests/macros/float/page_size.stderr
error: option `page_size` does not exist for kind `float`
 --> $DIR/page_size.rs:2:35
  |
2 |     discourse::questions![Float { page_size: todo!() }];
  |                                   ^^^^^^^^^
