tests/macros/float/page_size.rs
fn main() {
    discourse::questions![Float { page_size: todo!() }];
}
